# GraviRay-Simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/: Astro.cpp  Astro.h  Vetor3D.h
